<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/group_tab"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rd_moinhat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:text="@string/moinhat"
            android:textAlignment="center"
            android:textColor="@drawable/change_color_text" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/backgroundHome" />

        <RadioButton
            android:id="@+id/rd_danhmuc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:text="@string/danhmuc"
            android:textAlignment="center"
            android:textColor="@drawable/change_color_text" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/backgroundHome" />

        <RadioButton
            android:id="@+id/rd_khuvuc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:text="@string/khuvuc"
            android:textAlignment="center"
            android:textColor="@drawable/change_color_text" />
    </RadioGroup>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:drawableLeft="@drawable/nearby"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:text="@string/nearby"
                    android:textAllCaps="false" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/order"
                    android:drawableLeft="@drawable/order"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/gameandfun"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/gameandfun"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/blogs"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/blog"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/review"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/review"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/topmember"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Foody"/>
            </LinearLayout>

            <!--<android.support.v7.app.AlertController.RecycleListView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

            <!--</android.support.v7.app.AlertController.RecycleListView>-->
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>