<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.nhimcoi.yuh.chopsticks.View.SlashScreenActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_marginTop="130dp"
        android:src="@drawable/bgslash"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduce"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:id="@+id/textView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="33dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView">
        <TextView
            android:id="@+id/txtVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load"
            android:id="@+id/txtLoad"
            android:textColor="#fff"
            android:paddingLeft="5dp"
            android:layout_marginLeft="80dp"
            android:textSize="16sp"/>
    </LinearLayout>


</RelativeLayout>
