<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nhimcoi.yuh.chopsticks.View.Login_Signup.LoginActivity">
    <LinearLayout
        android:id="@+id/linerwrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/edtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/Email"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/edtPassLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/Password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius_button"
            android:drawableLeft="@drawable/ic_exit_to_app_white_24dp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorPrimaryDark"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="Login"
            android:id="@+id/btnLogin"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/or"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorAccent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:orientation="vertical"
        android:paddingRight="30dp"
        android:paddingLeft="30dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:drawableLeft="@drawable/icon_google"
            android:text="@string/LoginGG"
            android:textAllCaps="false"
            android:id="@+id/btnLoginGG"
            android:paddingLeft="5dp"
            android:textColor="@color/colorPrimaryDark"
            />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/btnLoginFB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="15dp"
            android:paddingTop="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_gravity="center_horizontal"
            android:text="  connect_with_facebook"
            app:com_facebook_login_text="@string/LoginFB"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotpassword"
                android:textColor="@color/colorAccent"
                android:id="@+id/txtforgotpass"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:id="@+id/txtsignup"
                android:paddingLeft="140dp"
                android:textColor="@color/colorAccent"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
